--- a/Pokedex/appsettings.json
+++ b/Pokedex/appsettings.json
@@ -5,5 +5,9 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ExternalRestApiUrls": {
+    "PokeApiBase": "https://pokeapi.co/api/",
+    "FunTranslationsApiBase": "https://api.funtranslations.com/translate/"
+  }
 }
